--- a/style_pachamama.css
+++ b/style_pachamama.css
@@ -53,9 +53,13 @@ img.banner_meio {
 	padding: 40px 0px;
 }
 
-#rodape .institucional {
+#rodape .institucional.fundo-secundario {
     background-color: #0E1816 !important;
     padding: 50px 20px !important;
+}
+
+#rodape .institucional.fundo-secundario .span12 {
+  display:none !important
 }
 
 .redes_sociais_rodape img {
